--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - XDEBUG_CONFIG
     extra_hosts:
       - host.docker.internal:host-gateway
+    env_file: "stack.env"
   web:
     build:
       context: .docker/nginx
@@ -39,6 +40,7 @@ services:
       - "traefik.http.routers.comptapapa-secure.tls.certresolver=lets-encrypt"
       - "traefik.http.routers.comptapapa-secure.service=comptapapa-secure"
       - "traefik.http.services.comptapapa-secure.loadbalancer.server.port=80"
+    env_file: "stack.env"
   mysql:
     image: mysql
     volumes:
@@ -49,6 +51,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
       - MYSQL_DATABASE=${MYSQL_DATABASE:-akaunting}
+    env_file: "stack.env"
 
 networks:
   traefik-proxy:
