--- a/stack.env
+++ b/stack.env
@@ -7,7 +7,7 @@ APP_DEBUG=true
 APP_SCHEDULE_TIME="09:00"
 APP_URL=comptapapa.spearheadsounds.com
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=comptapapa-mysql-1
 DB_PORT=3306
 DB_DATABASE=mariadb
 DB_USERNAME=mariadb
