--- a/stack.env
+++ b/stack.env
@@ -35,4 +35,4 @@ IGNITION_EDITOR=vscode
 MARIADB_ROOT_PASSWORD=2hKXC4niqrr8Py
 MARIADB_ROOT_USER=mariadb
 ADM_EMAIL=spearhead.sounds@gmail.com
-ADM_PASSWD=
+ADM_PASSWD=BX9d5cYk3sgq7U
