--- a/.docker/php/config/php.ini
+++ b/.docker/php/config/php.ini
@@ -3,3 +3,4 @@ xdebug.discover_client_host=true
 xdebug.log_level=0
 xdebug.mode=debug
 xdebug.start_with_request=yes
+host=comptapapa.spearheadsounds.com
