--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,8 +52,8 @@ services:
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-akaunting}
+    #  - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
+    #  - MYSQL_DATABASE=${MYSQL_DATABASE:-akaunting}
     env_file: "stack.env"
 
 networks:
