--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     #  - /storage/aktaunting/mysql/my.cnf:/etc/my.cnf
     ports:
       - 3306:3306
-    environment:
+    #environment:
     #  - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
     #  - MYSQL_DATABASE=${MYSQL_DATABASE:-akaunting}
     env_file: "stack.env"
