--- a/stack.env
+++ b/stack.env
@@ -9,8 +9,8 @@ APP_URL=comptapapa.spearheadsounds.com
 DB_CONNECTION=mysql
 DB_HOST=comptapapa-mysql-1
 DB_PORT=3306
-DB_DATABASE=mariadb
-DB_USERNAME=mariadb
+DB_DATABASE=akaunting
+DB_USERNAME=mysql
 DB_PASSWORD=2hKXC4niqrr8Py
 DB_PREFIX=
 BROADCAST_DRIVER=log
@@ -36,3 +36,6 @@ MARIADB_ROOT_PASSWORD=2hKXC4niqrr8Py
 MARIADB_ROOT_USER=mariadb
 ADM_EMAIL=spearhead.sounds@gmail.com
 ADM_PASSWD=BX9d5cYk3sgq7U
+MYSQL_ROOT_PASSWORD=2hKXC4niqrr8Py
+MYSQL_DATABASE=akaunting
+MYSQL_ROOT_USER=mysql
